# lighthouse2

./: .clang-format  .gitignore  CMakeLists.txt  LightHouse2.sln  README.md  camera.xml  clean.bat  imgui.ini  workspace.code-workspace
apps/imguiapp/: imguiapp.vcxproj  main.cpp  main_tools.h
apps/our_app/: CMakeLists.txt  main.cpp  main_tools.h  our_app.vcxproj  our_app.vcxproj.filters
apps/tinyapp/: main.cpp
data/pica/: pica_materials.xml
data/receiver/: red_materials.xml
lib/CUDA/shared_kernel_code/: tools_shared.h
lib/RenderCore_HardCore/: CMakeLists.txt  core_api.cpp  core_api.h  core_settings.h  ray.cpp  ray.h  rendercore.cpp  rendercore.h  rendercore_hardcore.vcxproj  rendercore_hardcore.vcxproj.filters
lib/RenderCore_Minimal/: rendercore.cpp  rendercore_minimal.vcxproj
lib/RenderCore_Optix7/: core_settings.h  rendercore.cpp
lib/RenderCore_Optix7/kernels/: .cuda.cu
lib/RenderCore_Optix7/optix/: .optix.cu
lib/RenderCore_Optix7Filter/: core_settings.h  rendercore.cpp
lib/RenderCore_Optix7Filter/kernels/: .cuda.cu
lib/RenderCore_OptixPrime_B/: rendercore.cpp
lib/RenderCore_PrimeRef/: rendercore_primeref.vcxproj
lib/RenderCore_SoftRasterizer/: rendercore.cpp
lib/RenderCore_Whitted/: BVH.cpp  BVH.h  CMakeLists.txt  core_api.cpp  core_api.h  core_settings.h  rendercore.cpp  rendercore.h  rendercore_whitted.vcxproj  rendercore_whitted.vcxproj.filters
lib/RenderSystem/: common_classes.h  host_mesh.cpp  host_scene.cpp  render_api.cpp  rendersystem.cpp
lib/platform/: CMakeLists.txt  platform.h  platform.vcxproj  system.cpp  system.h
(+1 files in other folders)
